welcome.lessons.welcome.variables.Variables.scala.code
while (!estSurBiscuit) {avance()}
prendBiscuit()
posebiscuit()
